TeX-Grammar.ebnf
expr = term , [ ( "+" | "-" ) , epxr ] ;
term = indexed value , [ ( "*" | "/" ) , term ] ;
indexed value = value , ( [ "^" , index ] , [ "_" , index ] ) | ( [ "_" , index ] , [ "^" , index ] ) ;
index = raw value | group ;
group = "{" , ` , "}" ;
value = [ "+" | "-" ] , ( raw value | group | bracket expr | fraction | binomial | root | function ) ;
raw value = ? number ? | ? letter ? | ? greek letter ? ;
bracket expr = "{" , expr , "}" | "(" , expr , ")" | "[" , expr , "]" | "\{" , expr , "\}" ;
fraction = "\frac" , group , group ;
binomial = "\binom" , group , group ;
root = "\sqrt" , [ argument ] , group ;
function = ? function name ? , expr ;
argument = "[" , expr , "]" ;
